third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/transmute-mut-dst-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    expected `usize`, found `&mut _`
   |                                    arguments to this function are incorrect
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
help: the return type of this call is `&mut _` due to the type of the argument passed
  --> tests/ui-stable/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ this argument influences the return type of `$crate`
note: function defined here
  --> src/util/macro_util.rs
   |
   | pub const fn must_use<T>(t: T) -> T {
   |              ^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
